--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
   <body itemscope itemtype="http://schema.org/Article">
     {% include header.html %}
     <main class="content" role="main">
