--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,10 @@
 <script src="underscore-min.js"></script>
 <script src="sequence-diagram-min.js"></script>
 
+<script>
+$("```sequence").sequenceDiagram({theme: 'hand'});
+</script>
+
   <body itemscope itemtype="http://schema.org/Article">
     {% include header.html %}
     <main class="content" role="main">
