--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
-<script src="raphael-min.js"></script>
-<script src="underscore-min.js"></script>
-<script src="sequence-diagram-min.js"></script>
+<script src="http://github.com/DmitryBaranovskiy/raphael/raw/master/raphael-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+<script src="https://raw.githubusercontent.com/bramp/js-sequence-diagrams/master/build/sequence-diagram-min.js"></script>
 
 <script>
 $("```sequence").sequenceDiagram({theme: 'hand'});
