--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
 <script src="https://raw.githubusercontent.com/bramp/js-sequence-diagrams/master/build/sequence-diagram-min.js"></script>
 
 <script>
-$("sequence").sequenceDiagram({theme: 'hand'});
+$(".diagram").sequenceDiagram({theme: 'hand'});
 </script>
 
   <body itemscope itemtype="http://schema.org/Article">
