--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="http://github.com/DmitryBaranovskiy/raphael/raw/master/raphael-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 <script src="https://raw.githubusercontent.com/bramp/js-sequence-diagrams/master/build/sequence-diagram-min.js"></script>
