--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
 <script src="http://github.com/DmitryBaranovskiy/raphael/raw/master/raphael-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 <script src="https://raw.githubusercontent.com/bramp/js-sequence-diagrams/master/build/sequence-diagram-min.js"></script>
+<script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <script>
 $(".diagram").sequenceDiagram({theme: 'hand'});
