--- a/css/main.sass
+++ b/css/main.sass
@@ -58,6 +58,13 @@ body
     background-size: cover
     background-repeat: no-repeat
 
+.advertising
+  position: fixed
+  left: 10px
+  top: $rs*4
+  overflow: hidden
+  z-index: 99
+
 .teaserimage
   height: 450px
   position: relative
