--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,15 @@
 <!-- header start -->
 
 <a href="{{ site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
-
+<div class="advertising">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 300x250, creado 28/07/10 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-0158894246177946"
+     data-ad-slot="6151201919"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <!-- header end -->
