--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
 <a href="{{ site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
 <div class="advertising">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 300x250, creado 28/07/10 -->
+<!-- jekyll -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:250px"
+     style="display:inline-block;width:120px;height:240px"
      data-ad-client="ca-pub-0158894246177946"
-     data-ad-slot="6151201919"></ins>
+     data-ad-slot="7079331475"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
