--- a/css/main.sass
+++ b/css/main.sass
@@ -64,6 +64,12 @@ body
   top: $rs*4
   overflow: hidden
   z-index: 99
+  
+@media all and (max-width: 670px) {
+  .advertising {
+   display:none;
+  }
+}
 
 .teaserimage
   height: 450px
