--- a/css/main.sass
+++ b/css/main.sass
@@ -65,7 +65,7 @@ body
   overflow: hidden
   z-index: 99
   
-@media all and (max-width: 670px) {
+@media (min-width: 600px) {
   .advertising {
    display:none;
   }
