--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -114,7 +114,7 @@ $(".diagram").sequenceDiagram({theme: 'hand'});
       })();
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      
+
 
     </main>
     <div class="bottom-closer">
@@ -124,7 +124,7 @@ $(".diagram").sequenceDiagram({theme: 'hand'});
       <div class="inner">
         <h1 class="blog-title">{{ site.title }}</h1>
         <h2 class="blog-description">{{ site.description }}</h2>
-        <a href="/" class="btn">Back to Overview</a>
+        <a href="/" class="btn">Volver a la portada</a>
       </div>
     </div>
     {% include javascripts.html %}
