--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,7 +50,7 @@
       <div class="inner">
         <h1 class="blog-title">{{ site.title }}</h1>
         <h2 class="blog-description">{{ site.description }}</h2>
-        <a href="/" class="btn">Back to Overview</a>
+        <a href="/" class="btn">Volver a la portada</a>
       </div>
     </div>
     {% include javascripts.html %}
