--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,7 +88,7 @@ $(".diagram").sequenceDiagram({theme: 'hand'});
               <p class="published">Publicado <time datetime="{{ page.date | date: "%F %R" }}">
 
                 {% assign m = page.date | date: "%-m" %}
-                {{ page.date | date: "%-d" }}
+                {{ page.date | date: "%-d %-y" }}
                 {% case m %}
                 {% when '1' %}Ene
                 {% when '2' %}Feb
