--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,8 +31,26 @@ $(".diagram").sequenceDiagram({theme: 'hand'});
             <div class="cf post-meta-text">
               <div class="author-image" style="background-image: url({{ site.author_image }})">Blog Logo</div>
               <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.author }}</h4>
-              on
-              <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time>
+              el 
+              <time datetime="{{ page.date | date: "%F %R" }}">
+                {% assign m = page.date | date: "%-m" %}
+                {{ page.date | date: "%-d" }}
+                {% case m %}
+                {% when '1' %}Ene
+                {% when '2' %}Feb
+                {% when '3' %}Mar
+                {% when '4' %}Abr
+                {% when '5' %}May
+                {% when '6' %}Jun
+                {% when '7' %}Jul
+                {% when '8' %}Ago
+                {% when '9' %}Sep
+                {% when '10' %}Oct
+                {% when '11' %}Nov
+                {% when '12' %}Dic
+                {% endcase %}
+                {{ page.date | date: "%Y" }}
+              </time>
               <!-- , tagged on {{#foreach tags}}<span class="post-tag-{{slug}}">{{#if @first}}{{else}}, {{/if}}<a href="/tag/{{slug}}">{{name}}</a></span>{{/foreach}} -->
             </div>
             <div style="text-align:center">
