--- a/css/main.sass
+++ b/css/main.sass
@@ -584,7 +584,11 @@ body
 #disqus_thread
   margin-top: 50px
 .post-tag-articleimage
-  display: none
+  display: 
+  
+.active .publisher-nav-color::after {
+background: rgb(0, 0, 0);
+}
 
 pre,
 code
