--- a/css/main.sass
+++ b/css/main.sass
@@ -25,7 +25,8 @@ $font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 main
   display: block
 
-
+a
+ color: #57ad68
 
 body
   font-family: $font-sans
