--- a/css/main.sass
+++ b/css/main.sass
@@ -25,6 +25,9 @@ $font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 main
   display: block
 
+a
+  color: #57ad68
+
 body
   font-family: $font-sans
   margin: 0
@@ -578,11 +581,6 @@ body
       border-radius: 999em
       line-height: 44px
       padding: 0 18px
-
-#disqus_thread
-  margin-top: 50px
-.post-tag-articleimage
-  display: 
 
 pre,
 code
