--- a/net2plan.css
+++ b/net2plan.css
@@ -10,6 +10,7 @@ position: absolute;
 top: 0;
 right: 0;
 bottom: 0;
+max-height: 240px;
 left: 0;
 opacity: .4;
 background: url(http://bootstrapdocs.com/v2.3.2/docs/assets/img/bs-docs-masthead-pattern.png) repeat center center;
